[gd_scene load_steps=3 format=3 uid="uid://dhdko5fnc6u1j"]

[ext_resource type="Theme" uid="uid://01gs7erpygem" path="res://assets/themes/default_theme.tres" id="1_rvcav"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_y3how"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3how")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0862745, 0.121569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_rvcav")
theme_override_font_sizes/font_size = 72
text = "Tank Battle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("1_rvcav")
theme_override_font_sizes/font_size = 32
text = "Start Game
"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
focus_neighbor_left = NodePath("../StartGameButton")
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_right = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
theme = ExtResource("1_rvcav")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="visibility_changed" from="MarginContainer/VBoxContainer/ButtonsVBox" to="." method="_on_buttons_v_box_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
